--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
-  "name": "app",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "eslint": "^8.23.0"
-  }
+    "name": "app",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "vitest"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "eslint": "^8.23.0",
+        "vitest": "^0.23.2"
+    },
+    "dependencies": {
+        "-": "^0.0.1",
+        "D": "^1.0.0",
+        "date-fns": "^2.29.2"
+    }
 }
